--- a/style.css
+++ b/style.css
@@ -2,6 +2,28 @@ body {
   background-color: black;
 }
 
+.parent {
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.bottomimage {
+  position: relative;
+  top: 0;
+  left: 0;
+  border: 1px solid #000000;
+}
+
+.topimage {
+  position: absolute;
+  height: 20%;
+  width: 20%;
+  top: 600px;
+  left: 400px;
+  opacity: 0.4;
+}
+
 .image {
   height: 100%;
   width: 100%;
