--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body {
   position: absolute;
   height: 20%;
   width: 20%;
-  top: 600px;
-  left: 400px;
+  top: 60%;
+  left:18%;
   opacity: 0.4;
 }
 
